<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:id="@+id/RelativeLayout1">
    <TextView android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:id="@+id/textView1" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/app_name" android:layout_width="wrap_content"></TextView>
    <TextView android:id="@+id/textView2" android:text="@string/developed_by" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/versionTextView" android:layout_alignParentLeft="true" android:layout_marginTop="10dp"></TextView>
    <TextView android:id="@+id/versionTextView" android:text="@string/version" android:layout_height="wrap_content" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:layout_width="wrap_content" android:layout_marginTop="10dp"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/thanks" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_below="@+id/textView2" android:layout_alignParentLeft="true" android:layout_marginTop="10dp"></TextView>
    <Button android:layout_height="wrap_content" android:text="@string/contact" android:layout_width="wrap_content" android:layout_below="@+id/textView3" android:layout_alignParentLeft="true" android:layout_marginTop="25dp" android:id="@+id/contactBtn"></Button>
    
</RelativeLayout>
